--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -181,11 +181,6 @@
 	&.products__product-price {
 		width: 80px;
 	}
-
-	&:first-child,
-	&:last-child {
-		min-width: 0;
-	}
 }
 
 .products__product-dimensions-input {
@@ -209,8 +204,26 @@
 	overflow-x: auto;
 }
 
-.products__product-form-variation-table-wrapper .form-text-input-with-affixes .form-text-input {
-	min-width: 80px;
+.products__product-form-variation-table-shadow {
+	position: relative;
+	overflow: hidden;
+
+	&:after {
+		content: "";
+		display: block;
+		width: 24px;
+		height: 100%;
+		position: absolute;
+		right: -12px;
+		top: 0;
+		background: radial-gradient( ellipse at center, rgba( $gray-dark,.125 ) 0%, rgba( $white,0 ) 75%, rgba( $white,0 ) 90% );
+	}
+}
+
+.products__product-form-variation-table-wrapper .form-text-input-with-affixes .form-text-input,
+.form-dimensions-input__length,
+.form-dimensions-input__width {
+	min-width: 75px;
 }
 
 /* TODO: remove placeholder styles once implemented */
@@ -250,6 +263,10 @@
 .products__variation-settings-link {
 	text-decoration: underline;
 	cursor: pointer;
+	color: $blue-medium;
+	&:hover {
+		color: $blue-light;
+	}
 }
 
 .products__product-form-variation-dialog {
