WooCommerce: Split out action header
The action header with breadcrumbs will be used in a lot of places in
the WooCommerce extension, so this splits that component out to its own
component.

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -17,11 +17,11 @@
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
 
-	.products__header {
+	.components__action-header {
 		width: 100%;
 	}
 
-	.products__header-right {
+	.components__action-header-actions {
 		position: absolute;
 		top: 16px;
 		right: 24px;
