Include description in suggestions.

--- a/client/components/suggestions/style.scss
+++ b/client/components/suggestions/style.scss
@@ -73,3 +73,10 @@
 		color: $white;
 	}
 }
+
+.suggestions__value-description {
+	pointer-events: none;
+	text-indent: 10px;
+	color: gray-text-min;
+	font-size: 14px;
+}
