Refactor the header text to be in the parent compnent for simplicity

--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -34,8 +34,7 @@
 	}
 }
 
-.login__form-header,
-.two-factor-authentication__header {
+.login__form-header {
 	font-size: 22px;
 	margin-bottom: 24px;
 	margin-top: 16px;
