--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -25,6 +25,7 @@
 @import 'blocks/calendar-button/style';
 @import 'blocks/calendar-popover/style';
 @import 'blocks/comment-button/style';
+@import 'blocks/comment-detail/style';
 @import 'blocks/comments/style';
 @import 'blocks/daily-post-button/style';
 @import 'blocks/disconnect-jetpack-dialog/style';
