Always hides the remove button from the first attribute in the list.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -420,5 +420,11 @@
 		width: 50%;
 		margin-right: 16px;
 	}
+}
 
+.products__additional-details-form-first-row {
+	.products__additional-details-form-remove {
+		width: 24px;
+		height: 24px;
+	}
 }
