--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -1,7 +1,74 @@
 .comment-detail.card {
+	font-size: 14px;
+	margin: 0 auto;
 	padding: 0;
+
+	&.is-expanded {
+		margin: 16px auto;
+	}
 }
 
+.comment-detail__header {
+	border-bottom: 1px solid lighten( $gray, 30% );
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	padding: 12px 8px;
+
+	&.is-preview {
+		cursor: pointer;
+	}
+
+	.comment-detail__user-avatar {
+		display: inline-block;
+		height: 24px;
+		padding: 0 8px;
+		vertical-align: middle;
+		width: 24px;
+	}
+
+	.comment-detail__comment-preview {
+		width: 60%;
+		overflow: hidden;
+		padding: 0 8px;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
+
+	.comment-detail__actions {
+		color: $gray;
+		a {
+			color: $gray;
+			cursor: pointer;
+			padding: 0 8px;
+			white-space: nowrap;
+		}
+		.gridicon {
+			margin-right: 4px;
+			vertical-align: middle;
+		}
+	}
+}
+
+.comment-detail__user-avatar {
+	flex-shrink: 0;
+	img {
+		border-radius: 50%;
+	}
+}
+.comment-detail__user-info {
+	color: $gray;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+
+	strong {
+		color: $gray-text;
+		margin-right: 8px;
+	}
+}
+
+/*
 .comment-detail__post,
 .comment-detail__actions,
 .comment-detail__reply {
@@ -126,3 +193,4 @@
 		width: 32px;
 	}
 }
+*/
