--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -8,8 +8,25 @@
 	}
 }
 
+.comment-detail__author-avatar {
+	flex-shrink: 0;
+	img {
+		border-radius: 50%;
+	}
+}
+.comment-detail__author-info {
+	color: $gray;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+
+	strong {
+		color: $gray-text;
+		margin-right: 8px;
+	}
+}
+
 .comment-detail__header {
-	border-bottom: 1px solid lighten( $gray, 30% );
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
@@ -19,7 +36,11 @@
 		cursor: pointer;
 	}
 
-	.comment-detail__user-avatar {
+	.comment-detail.is-expanded & {
+		border-bottom: 1px solid lighten( $gray, 30% );
+	}
+
+	.comment-detail__author-avatar {
 		display: inline-block;
 		height: 24px;
 		padding: 0 8px;
@@ -50,73 +71,34 @@
 	}
 }
 
-.comment-detail__user-avatar {
-	flex-shrink: 0;
-	img {
-		border-radius: 50%;
-	}
-}
-.comment-detail__user-info {
-	color: $gray;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-
-	strong {
-		color: $gray-text;
-		margin-right: 8px;
-	}
-}
-
-/*
-.comment-detail__post,
-.comment-detail__actions,
-.comment-detail__reply {
-	border-bottom: 1px solid lighten( $gray, 30% );
-	padding: 16px;
-}
-
-.comment-detail__author {
-	align-items: center;
-	display: flex;
-	flex-flow: row;
-	font-size: 14px;
-	line-height: 1.4;
-
-	.comment-detail__author-avatar {
-		flex-shrink: 0;
-		margin-right: 12px;
-		width: 32px;
-
-		& > img {
-			border-radius: 50%;
-		}
-	}
-
-	.comment-detail__author-content {
-		flex-grow: 1;
-
-		.gridicon {
-			padding-right: 4px;
-			vertical-align: text-bottom;
-		}
-	}
-
-	.comment-detail__author-name {
-		font-weight: 600;
-		padding-right: 8px;
-	}
-
-	.comment-detail__comment-date,
-	.comment-detail__post-title {
-		color: $gray;
-	}
-}
-
 .comment-detail__post {
-	.comment-detail__author-name,
-	.comment-detail__comment-date {
-		display: inline;
+	border-bottom: 1px solid lighten( $gray, 30% );
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: flex-start;
+	padding: 12px 16px;
+
+	.reader-avatar {
+		flex-shrink: 0;
+		margin-left: 0;
+	}
+
+	.comment-detail__post-info {
+		color: $gray;
+		line-height: 32px;
+		overflow: hidden;
+		padding-left: 4px;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+
+		span {
+			color: $gray-text;
+			margin-right: 8px;
+		}
+
+		a {
+			color: $gray;
+		}
 	}
 }
 
@@ -129,68 +111,19 @@
 		padding: 16px;
 	}
 
-	.comment-detail__comment-body {
-		font-family: $serif;
-		padding-top: 16px;
-	}
-}
+	.comment-detail__author {
+		display: flex;
+		flex-flow: row nowrap;
+		padding-bottom: 16px;
 
-.comment-detail__author-meta {
-	color: $gray;
-	display: flex;
-	flex-flow: row wrap;
-	font-size: 14px;
-	padding: 16px 8px 0px 8px;
+		.comment-detail__author-avatar {
+			height: 40px;
+			width: 40px;
+		}
 
-	div {
-		box-sizing: border-box;
-		flex-grow: 0;
-		flex-shrink: 0;
-		overflow: hidden;
-		padding: 0 8px;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		width: 50%;
-	}
-
-	.gridicon {
-		padding-right: 4px;
-		vertical-align: text-bottom;
-	}
-}
-
-.comment-detail__actions {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-
-	div {
-		color: $blue-wordpress;
-		cursor: pointer;
-		font-size: 16px;
-		line-height: 1.2;
-		padding: 8px;
-		text-align: center;
-		&:hover {
-			color: $blue-light;
+		.comment-detail__author-info {
+			line-height: 1.4;
+			padding-left: 8px;
 		}
 	}
-
-	span {
-		display: block;
-	}
 }
-
-.comment-detail__reply {
-	display: flex;
-	flex-flow: row nowrap;
-
-	img {
-		border-radius: 50%;
-		flex-shrink: 0;
-		height: 32px;
-		margin-right: 16px;
-		width: 32px;
-	}
-}
-*/
