Remove p, left align search empty results text

--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -206,7 +206,12 @@
 	color: darken( $gray, 10% );
 }
 
-.following-manage__search-results-empty-message {
+.following-manage__search-results.is-empty {
+	margin-top: 10px;
+}
+
+.following-manage__subscriptions-list.is-empty {
+	margin-top: 30px;
 	text-align: center;
 }
 
