--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -26,25 +26,6 @@
 	}
 }
 
-.reader-subscription-list-item__site-excerpt {
-	display: block;
-	max-height: 16px * 2.8;
-	overflow: hidden;
-	position: relative;
-	text-overflow: ellipsis;
-	width: 100%;
-
-	@include breakpoint( ">660px" ) {
-		max-height: 16px * 1.4;
-	}
-
-	&:not( .is-placeholder )::after {
-		&::after {
-			@include long-content-fade( $size: 20% );
-		}
-	}
-}
-
 .reader-subscription-list-item__link,
 .reader-subscription-list-item__link:visited {
 	color: $blue-medium;
@@ -83,20 +64,26 @@
 
 .reader-subscription-list-item__site-title,
 .reader-subscription-list-item__by-text,
-.reader-subscription-list-item__site-url {
+.reader-subscription-list-item__site-url,
+.reader-subscription-list-item__site-excerpt {
 	display: block;
-	height: 20px;
+	max-height: 16px * 1.3;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	overflow-wrap: break-word;
 	position: relative;
 	width: 100%;
-	word-break: break-all;
+	word-wrap: break-word;
 
 	&:not( .is-placeholder )::after {
-		&::after {
-			@include long-content-fade( $size: 20% );
-		}
+		@include long-content-fade( $size: 20% );
+		height: 16px * 1.4;
+		top: auto;
 	}
+}
+
+.reader-subscription-list-item__site-excerpt {
+	max-height: 16px * 2.8;
 }
 
 .reader-subscription-list-item__site-title {
