Add margin only to rec sites

--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -164,6 +164,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 
 	.reader-subscription-list-item__byline {
+		margin-right: 0;
 		padding-right: 0;
 	}
 
