--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -79,3 +79,9 @@
 .card.two-factor-authentication__form-action {
 	background: lighten( $gray, 34% );
 }
+
+.two-factor-authentication__small-print {
+	clear: both;
+	font-size: 11px;
+	padding: 1em 0;
+}
