button-group: update examples

--- a/client/devdocs/design/style.scss
+++ b/client/devdocs/design/style.scss
@@ -55,12 +55,16 @@
 
 .docs__design-button-row,
 .design__button-row {
-	&:first-child {
-		margin-top: -16px;
-	}
+	margin-bottom: 20px;
 	.button {
-		margin-top: 16px !important;
 		margin-right: 16px !important;
+	}
+}
+
+.docs__design-button-group-row {
+	margin-bottom: 20px;
+	.button-group {
+		margin-right: 16px;
 	}
 }
 
