--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -159,6 +159,7 @@
 @import 'components/select-dropdown/style';
 @import 'components/seo/style';
 @import 'components/share/facebook-share-preview/style';
+@import 'components/share/google-plus-share-preview/style';
 @import 'components/share/twitter-share-preview/style';
 @import 'blocks/upgrade-nudge-expanded/style';
 @import 'components/seo/preview-upgrade-nudge/style';
