Minor changes for usability and translations:
- Converted the DnsTemplateButtonGroup to a component named more
  generically (in case of future component type changes) and now return
  a SegmentedControl instead of a ButtonGroup. This provides better
  feedback to show the user which template the displayed form is for.
- Use placeholders for the service names in the nearly identical template form labels.
- Added a translator comment to explain the purpose of the placeholder
  in the template form label translations.
- Added the missing htmlFor in the DNS Template FormLabel.

--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -882,9 +882,7 @@ ul.email-forwarding__list {
 	}
 
 	.name-servers__dns-templates-buttons {
-		button {
-			margin: 5px 0 5px 0;
-		}
+		margin-top: 20px;
 	}
 
 	&.is-placeholder {
