--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -11,6 +11,7 @@
 	@import 'app/products/product-form';
 	@import 'app/settings/payments/style';
 
+	@import 'components/action-header/style';
 	@import 'components/address-view/style';
 	@import 'components/extended-header/style';
 	@import 'components/form-dimensions-input/style';
