Login: Fix wrong stylesheet path

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -18,7 +18,6 @@
 @import 'account-recovery/reset-password/transaction-id-form/style';
 @import 'account-recovery/style';
 @import 'auth/style';
-@import 'login/wp-login/style';
 @import 'blocks/app-promo/style';
 @import 'blocks/author-compact-profile/style';
 @import 'blocks/author-selector/style';
@@ -235,6 +234,7 @@
 @import 'me/help/help-results/style';
 @import 'me/help/help-search/style';
 @import 'me/help/style';
+@import 'me/login/wp-login/style';
 @import 'me/next-steps/next-steps';
 @import 'me/next-steps/next-steps-box';
 @import 'me/notification-settings/blogs-settings/style';
