--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -105,43 +105,6 @@
 		background: lighten( $gray, 30% );
 	}
 
-	.products__product-dimensions-weight {
-		display: flex;
-		justify-content: flex-start;
-
-		.products__product-dimensions-input {
-			margin-right: 8px;
-		}
-	}
-
-	.products__product-manage-stock {
-		display: inline-flex;
-		flex-direction: row;
-		width: 100%;
-
-		.products__product-manage-stock-checkbox {
-			@include clear-fix();
-			padding: 12px;
-			background: $white;
-			border: 1px solid lighten( $gray, 20% );
-			display: flex;
-
-			input[type=checkbox] {
-				float: none;
-				margin: 0;
-			}
-
-			+ .form-text-input {
-				transform: translateX( -1px );
-			}
-		}
-
-		.form-text-input {
-			height: 42px;
-			width: 70px;
-		}
-	}
-
 	.products__product-form-variation-row {
 		td {
 			.products__product-manage-stock {
@@ -185,12 +148,6 @@
 
 .products__product-dimensions-input {
 	display: flex;
-}
-
-.products__product-dimensions-length,
-.products__product-dimensions-width,
-.products__product-dimensions-height {
-	width: 120px
 }
 
 .products__all-variations {
@@ -447,5 +404,76 @@
 	.products__additional-details-form-remove {
 		width: 24px;
 		height: 24px;
+	}
+}
+
+.products__product-manage-stock {
+	display: inline-flex;
+	flex-direction: row;
+	width: 100%;
+
+	.products__product-manage-stock-checkbox {
+		@include clear-fix();
+		padding: 12px;
+		background: $white;
+		border: 1px solid lighten( $gray, 20% );
+		display: flex;
+
+		input[type=checkbox] {
+			float: none;
+			margin: 0;
+		}
+
+		+ .form-text-input {
+			transform: translateX( -1px );
+		}
+	}
+
+	.form-text-input {
+		height: 42px;
+		width: 70px;
+	}
+}
+
+.products__product-dimensions-weight {
+	display: flex;
+	justify-content: flex-start;
+
+	.products__product-dimensions-input {
+		margin-right: 8px;
+	}
+}
+
+.products__product-simple-cards {
+	margin-top: -1em;
+	border-top: 0;
+
+	.card {
+		margin-top: -1em;
+	}
+
+	.form-dimensions-input__height {
+		width: 140px;
+	}
+
+	.products__product-form-price .form-text-input-with-affixes {
+		width: 40%;
+	}
+
+	.products__product-manage-stock .form-text-input {
+		width: 200px;
+	}
+
+	.products__product-form-stock {
+		display: flex;
+	}
+
+	.products__product-manage-stock-wrapper {
+		flex: 1;
+		width: 60%;
+	}
+
+	.products__product-backorders-wrapper {
+		flex: 1;
 	}
 }
