--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -10,7 +10,7 @@
 }
 
 .following-manage__subscriptions-list {
-	-webkit-font-smoothing: subpixel-antialiased; // Fixes fixed elements text aliasing in Safari
+	-webkit-font-smoothing: subpixel-antialiased; // Fixes aliasing in Safari
 }
 
 .following-manage__subscriptions-list .reader-subscription-list-item__options {
