--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -164,6 +164,11 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		}
 	}
 
+	&:only-child {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 	.reader-subscription-list-item__byline {
 		margin-right: 0;
 		padding-right: 0;
