--- a/client/blocks/site/style.scss
+++ b/client/blocks/site/style.scss
@@ -86,6 +86,9 @@
 	margin-right: 8px;
 	flex: 0 0 auto;
 }
+.site .site__site-icon-link {
+	align-self: center;
+}
 
 // The group of site title and domain
 .site__info {
