--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -16,6 +16,7 @@
 	@import 'components/form-dimensions-input/style';
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
+	@import 'app/dashboard/style';
 
 	.components__action-header {
 		width: 100%;
