fields margin in dimensions inputs

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -442,6 +442,10 @@
 	.products__product-dimensions-input {
 		margin-right: 8px;
 	}
+
+	.form-fieldset {
+		margin-bottom: 0;
+	}
 }
 
 .products__product-simple-cards {
