Create separate style block for search results

--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -206,6 +206,23 @@
 	color: darken( $gray, 10% );
 }
 
+.following-manage__search-results .reader-subscription-list-item__options {
+	display: flex;
+	flex-direction: column;
+	min-width: 24px;
+
+	@include breakpoint( ">660px" ) {
+		min-width: 90px;
+	}
+
+	.button.follow-button {
+
+		@include breakpoint( ">660px" ) {
+			display: flex;
+		}
+	}
+}
+
 .following-manage__search-results.is-empty {
 	margin-top: 10px;
 }
