Fix fade for description

--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -110,7 +110,7 @@
 	}
 
 	.reader-feed-header__details {
-		align-self: center;
+		align-self: stretch;
 		font-size: 14px;
 		max-height: 16px * 4;
 		overflow: hidden;
