--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -242,11 +242,28 @@
 
 .following-manage__url-follow {
 	border-bottom: 1px solid lighten( $gray, 30% );
-	padding: 13px 0 10px;
+	color: lighten( $gray, 10% );
 	display: flex;
+	font-size: 14px;
 	justify-content: center;
+	padding: 13px 0 10px;
+
+	@include breakpoint( "<480px" ) {
+		flex-direction: column;
+	}
+
+	.following-manage__url-enter {
+		margin-right: 0;
+		text-align: center;
+
+		@include breakpoint( ">480px" ) {
+			margin-right: 6px;
+		}
+	}
 
 	.follow-button {
+		padding: 0;
+
 		.gridicon {
 			fill: $blue-medium;
 		}
