add a min-width to the weight input
So that one can always see the value inside

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -443,6 +443,10 @@
 		margin-right: 40px;
 	}
 
+	.products__product-weight-input {
+		min-width: 120px;
+	}
+
 	.form-fieldset {
 		margin-bottom: 0;
 	}
