Add a label to the price input
Also styles the price input width to match weight

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -484,7 +484,7 @@
 	}
 
 	.products__product-form-price .form-text-input-with-affixes {
-		width: 40%;
+		width: 140px;
 	}
 
 	.products__product-manage-stock .form-text-input {
